# aa-cgka

./: Cargo.toml  LICENSE  README.md
basic_credential/src/: lib.rs
cli/: Cargo.toml
cli/resources/: credential.json  different_requirement.json  requirement.json
cli/resources/sdjwt/: sd_jwt_issuer_sk
cli/resources/temp/: vc.jsonld  vp.jsonld
cli/src/: aa_cgka_user.rs  backend.rs  identity.rs  main.rs  user.rs
delivery-service/ds-lib/src/: lib.rs
delivery-service/ds/src/: main.rs
environment/client/: Settings.toml  docker-compose.yml
environment/client/issuer/: Dockerfile
environment/log_scripts/: latency_plot.py  log_parser.py  time_plot.py
openmls/: Cargo.toml
openmls/src/: helpers.rs  lib.rs  main.rs  prelude.rs  previous_main.rs
openmls/src/binary_tree/: mod.rs
openmls/src/binary_tree/array_representation/: diff.rs  tree.rs
openmls/src/ciphersuite/: aead.rs  reuse_guard.rs
openmls/src/credentials/: codec.rs  errors.rs  mod.rs
openmls/src/extensions/: codec.rs  mod.rs  ssi_vc_extension.rs
openmls/src/framing/: sender.rs  test_framing.rs  validation.rs
openmls/src/group/: group_context.rs  mod.rs
openmls/src/group/core_group/: kat_passive_client.rs  mod.rs  new_from_external_init.rs  past_secrets.rs  process.rs  proposals.rs  staged_commit.rs
openmls/src/group/mls_group/: config.rs  creation.rs  errors.rs  mod.rs  proposal.rs  requirements.rs
openmls/src/group/public_group/: builder.rs  diff.rs  mod.rs  process.rs  validation.rs
openmls/src/group/public_group/diff/: apply_proposals.rs  compute_path.rs
openmls/src/group/tests/: kat_messages.rs
openmls/src/key_packages/: mod.rs
openmls/src/messages/: group_info.rs  mod.rs  proposals.rs  proposals_in.rs
openmls/src/schedule/: message_secrets.rs  mod.rs  psk.rs
openmls/src/tree/: secret_tree.rs  sender_ratchet.rs
openmls/src/treesync/: diff.rs  mod.rs  node.rs  treesync_node.rs
openmls/src/treesync/node/: encryption_keys.rs  leaf_node.rs  parent_node.rs
openmls/src/treesync/node/leaf_node/: capabilities.rs
openmls/tests/: benchmarks_add.rs  benchmarks_join.rs
simulated_client/: Cargo.toml
simulated_client/basic_credential/src/: lib.rs
simulated_client/delivery-service/ds-lib/: Cargo.toml
simulated_client/delivery-service/ds-lib/src/: lib.rs
simulated_client/delivery-service/ds/src/: main.rs
simulated_client/logs/: User_1_0.txt  User_1_1.txt  User_1_10.txt  User_1_11.txt  User_1_12.txt  User_1_13.txt  User_1_14.txt  User_1_15.txt  User_1_16.txt  User_1_17.txt  User_1_18.txt  User_1_19.txt  User_1_2.txt  User_1_3.txt  User_1_4.txt  User_1_5.txt  User_1_6.txt  User_1_7.txt  User_1_8.txt  User_1_9.txt
simulated_client/openmls/: Cargo.toml
simulated_client/openmls/src/: helpers.rs  lib.rs  prelude.rs
simulated_client/openmls/src/credentials/: errors.rs  mod.rs
simulated_client/openmls/src/extensions/: codec.rs  mod.rs  ssi_vc_extension.rs
simulated_client/openmls/src/framing/: validation.rs
simulated_client/openmls/src/group/: errors.rs
simulated_client/openmls/src/messages/: codec.rs  group_info.rs  proposals.rs  proposals_in.rs
simulated_client/simulated_client/: Cargo.toml
simulated_client/simulated_client/resources/: Settings.toml  credential.json  different_requirement.json  requirement.json
simulated_client/simulated_client/resources/sdjwt/: sd_jwt_holder_pk.jwt  sd_jwt_issuer_pk.jwk
simulated_client/simulated_client/src/: client_agent.rs  identity.rs  main.rs  user.rs  user_parameters.rs
simulated_client/simulated_client/src/network/: backend.rs
simulated_client/simulated_client/src/pubsub/: gossipsub_broker.rs  (+3 more)
simulated_client/vc_credential/: Cargo.toml
simulated_client/vc_credential/resources/issuer/: did.json
simulated_client/vc_credential/resources/subject/: did.json
simulated_client/vc_credential/src/: did_resolver.rs  lib.rs  sdjwt.rs  vc.rs
simulated_client/vc_credential/ssi/did-web/src/: lib.rs
traits/src/: signatures.rs  types.rs
vc_credential/: Cargo.toml
vc_credential/resources/: bbsplus-jane-doe-unsigned-vc.json  holder_key  issuer_jwk.json  sd_jwt_issuer_pk
vc_credential/src/: lib.rs  main.rs  sdjwt.rs  vc.rs
vc_credential/ssi/: Cargo.toml
(+13 files in other folders)
