[package]
name = "openmls_vc_credential"
version = "0.3.0"
authors = ["SDABIS"]
edition = "2021"
description = "A Verifiable Credentials implementation for OpenMLS"
license = "MIT"
readme = "README.md"

[dependencies]
openmls_basic_credential =  { version = "0.3.0", path = "../basic_credential" }
openmls_traits = { version = "0.3.0", path = "../traits" }
ssi = {version = "0.7.0", path = "ssi"}
did-web = {version = "0.2.2", path = "ssi/did-web"}
ssi-dids = {version = "0.1.1", path = "ssi/ssi-dids"}

#ssi = "0.7.0"
#did-web = "0.2.2"
serde_json = "1.0"
tls_codec = { workspace = true }
serde = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
http = "0.2"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
arrayref = "0.3"
blake2 = "0.8"
failure = "0.1"
ff-zeroize = "0.6"
hex = "0.4"
hkdf = "0.8"
rayon = { version = "1.3", optional = true }
pairing-plus = "0.19"
subtle = "2.2"
zeroize = "1.1"
bbs = "0.4.0"
sha2 = "0.8"
sd-jwt-rs = "0.7.0"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"

# Rust Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
p256 = { version = "0.13" }
rand = "0.8"
log = "0.4.20"
async-trait = "0.1.85"

[features]
clonable = [] # Make the keys clonable
test-utils = [] # Only use for tests!
ssi = ["ssi/bbsplus"]
ssi-dids = ["ssi-dids/example"]
